Fixing Mobile Spacing
reducing top margin of text and removing extra padding

--- a/css/main.css
+++ b/css/main.css
@@ -384,7 +384,7 @@ button:hover{
     }
 
     #content {
-        padding: 0px 20px;
+        padding: 0px;
     }
 
     #titleBox span{
@@ -399,5 +399,8 @@ button:hover{
         margin:40px 0px 100px 0px;
     }
 
+    #titleBox {
+        margin-top: 5vh;
+    }
 
 }
